# mealbot

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build-and-push.yml  build-discord-bot.yml  ci-job.yml  terraform-ci.yml
api/: Dockerfile  pyproject.toml
api/src/: main.py  video_pipeline.py
discord-bot/: .dockerignore  Dockerfile  README.md  pyproject.toml
discord-bot/src/: api_client.py  bot.py  config.py  url_processor.py
discord-bot/src/tests/: __init__.py  test_url_detector.py
discord-bot/src/utils/: __init__.py  embeds.py  logger.py  url_detector.py
experience-api/: Dockerfile  pyproject.toml
experience-api/src/: main.py
terraform/: main.tf  variables.tf
