[project]
name = "experience-api"
version = "0.1.0"
description = "FastAPI server for processing URLs"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "yt-dlp",
    "faster-whisper", # Changed from openai-whisper
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
